# librsvg

./: .clang-tidy  .gitignore  DONE.md  README.md  SECURITY_FIX_REPORT.md  TODO.md  config.h.meson  librsvg-api-abi.md  meson.build  meson_options.txt  reproduce.c
.github/workflows/: ci.yml
doc/: DEVELOPING.md  STATIC_ANALYSIS.md
docs/css/: current-support.md  migration-compat.md  precedence.md
gdk-pixbuf-loader/: io-svg.c  meson.build  test.c
libcroco/: meson.build
libcroco/src/: cr-additional-sel.c  cr-additional-sel.h  cr-attr-sel.c  cr-attr-sel.h  cr-cascade.c  cr-cascade.h  cr-declaration.c  cr-declaration.h  cr-doc-handler.c  cr-doc-handler.h  cr-enc-handler.c  cr-enc-handler.h  cr-fonts.c  cr-fonts.h  cr-input.c  cr-input.h  cr-num.c  cr-num.h  cr-om-parser.c  cr-om-parser.h  cr-parser.c  cr-parser.h  cr-parsing-location.c  cr-parsing-location.h  cr-prop-list.c  cr-prop-list.h  cr-pseudo.c  cr-pseudo.h  cr-rgb.c  cr-rgb.h  cr-safe-math.h  cr-sel-eng.c  cr-sel-eng.h  cr-selector.c  cr-selector.h  cr-simple-sel.c  cr-simple-sel.h  cr-statement.c  cr-statement.h  cr-string.c  (+13 more)
libcroco/tests/: test-css-injection.c  test-term.c
src/: librsvg-features.h.in  meson.build  rsvg-base-file-util.c  rsvg-base.c  rsvg-cairo-clip.c  rsvg-cairo-clip.h  rsvg-cairo-draw.c  rsvg-cairo-draw.h  rsvg-cairo-render.c  rsvg-cairo-render.h  rsvg-cairo.h  rsvg-compat.h  rsvg-cond.c  rsvg-css-engine-croco.c  rsvg-css-engine.c  rsvg-css-engine.h  rsvg-css.c  rsvg-css.h  rsvg-defs.c  rsvg-defs.h  rsvg-deprecated.h  rsvg-file-util.c  rsvg-filter.c  rsvg-filter.h  rsvg-gobject.c  rsvg-image.c  rsvg-image.h  rsvg-io.c  rsvg-io.h  rsvg-marker.c  rsvg-marker.h  rsvg-mask.c  rsvg-mask.h  rsvg-paint-server.c  rsvg-paint-server.h  rsvg-path.c  rsvg-path.h  rsvg-private.h  rsvg-shapes.c  rsvg-shapes.h  (+12 more)
tests/: README.md  TESTING.md  api.c  check-build-targets.py  ci-option.c  ci-workflow.c  crash.c  dimensions.c  errors.c  loading.c  meson.build  path-builder.c  render-crash.c  restyle.c  rsvg-test.c  security-check.c  style-dump.c  styles.c  test-gtk4.c  test-loader.py  test-setup-config.c  test-utils.c  test-utils.h  vulnerability_check.c  xss_checks.c
tests/fixtures/: secret.txt
tests/fuzz/: fuzz-css.c  fuzz-load-render.c  fuzz-path.c
